--- a/WebContent/paginas/timeline/timelineView.xhtml
+++ b/WebContent/paginas/timeline/timelineView.xhtml
@@ -14,6 +14,7 @@
 <h:body onload="#{timelineBean.inicializaPagina()}">
 	<b:container styleClass="col-lg-12"
 		style="height: 60px; background: #CECECE; margin-bottom: 20px;">
+	<h3 style="float: left; font-family: 'Tahoma'; font-weight: bold;">MY GARAGE</h3>
 		<h:form>
 			<b:commandButton value="Log Out" action="#{timelineBean.logOut()}"
 				styleClass="btn btn-danger" iconAwesome="sign-out" style="float: right; margin-top: 10px;" />
