--- a/WebContent/paginas/usuario/usuarioView.xhtml
+++ b/WebContent/paginas/usuario/usuarioView.xhtml
@@ -21,7 +21,7 @@
 	<h:form id="inputForm">		
 		<h:panelGrid  columns="2">
 		
-			<h:graphicImage rendered="true" name="/images/#{usuarioBean.usuario.foto}" /><br></br>	
+			<h:graphicImage rendered="true" value="C:\MyGarage\img\USUARIO\2\perfil.jpg" style=" width : 147px;" title="imgfdp" /><br></br>	
 			
 			<h:outputLabel value="Codigo: "/> 	
 			<h:outputText value="#{usuarioBean.usuario.idUsuario}"/>
