--- a/WebContent/paginas/loginView.xhtml
+++ b/WebContent/paginas/loginView.xhtml
@@ -62,7 +62,10 @@
 							<b:commandButton
 								action="#{usuarioBean.telaCadastrarUsuarioController}"
 								value="Sign Up" look="info" icon="pencil"
-								styleClass="btn btn-primary btn-block" />
+								styleClass="btn btn-primary btn-block" /> <br></br>
+								
+								<b:commandButton value="TesteFoto"
+									action="/paginas/testeTela"  />
 						</h:form>
 					</b:container>
 				</b:container>
