--- a/WebContent/paginas/carros/acessoriosView.xhtml
+++ b/WebContent/paginas/carros/acessoriosView.xhtml
@@ -18,8 +18,8 @@
 			<b:container>
 				<b:commandButton value="Home"
 					action="/paginas/timeline/timelineView" look="primary" icon="home"
-					style="margin-top: 10px;"/>
-				
+					style="margin-top: 10px;" />
+
 				<b:commandButton value="Log Out" action="#{timelineBean.logOut()}"
 					styleClass="btn btn-danger" iconAwesome="sign-out"
 					style="margin-top: 10px; margin-left: 5px;" />
@@ -37,9 +37,12 @@
 	<b:container layout="fluid">
 		<h:form id="inputForm">
 			<h:panelGrid columns="2">
+				<h:graphicImage library="images" rendered="true"
+					name="USUARIO/#{carroBean.carro.usuarioIdUsuario}/ace_#{carroBean.acessorios.nome}.jpg" />
+
 				<h:outputLabel value="Foto:" />
 				<h:graphicImage name="/images/#{carroBean.acessorios.foto}" />
-				
+
 				<h:outputLabel value="Codigo: " />
 				<h:outputText value="#{carroBean.acessorios.idAcessorios}" />
 
@@ -58,7 +61,7 @@
 				<h:outputLabel value="Modelo: " />
 				<h:outputText value="#{carroBean.acessorios.modelo}" />
 			</h:panelGrid>
-			
+
 			<b:commandButton action="/paginas/carros/manterAcessoriosView"
 				value="Alterar" look="info" icon="edit" style="margin-right: 5px;" />
 			<b:commandButton action="#{carroBean.excluiAcessoriosController()}"
@@ -74,9 +77,8 @@
 	</b:container>
 
 	<h:form>
-		<b:commandButton value="Voltar"
-			action="/paginas/carros/carroView" look="primary"
-			icon="arrow-left" />
+		<b:commandButton value="Voltar" action="/paginas/carros/carroView"
+			look="primary" icon="arrow-left" />
 	</h:form>
 
 
