--- a/WebContent/paginas/carros/acessoriosView.xhtml
+++ b/WebContent/paginas/carros/acessoriosView.xhtml
@@ -38,7 +38,7 @@
 		<h:form id="inputForm">
 			<h:panelGrid columns="2">
 				<h:graphicImage library="images" rendered="true"
-					name="USUARIO/#{carroBean.carro.usuarioIdUsuario}/ace_#{carroBean.acessorios.nome}.jpg" />
+					name="USUARIO/#{carroBean.carro.usuarioIdUsuario}/ace_#{carroBean.acessorios.idAcessorios}.jpg" />
 
 				<h:outputLabel value="Foto:" />
 				<h:graphicImage name="/images/#{carroBean.acessorios.foto}" />
