--- a/WebContent/paginas/usuario/manterUsuarioView.xhtml
+++ b/WebContent/paginas/usuario/manterUsuarioView.xhtml
@@ -88,7 +88,9 @@
 				<h:outputText />
 				<b:commandButton value="Confirmar"
 					action="#{usuarioBean.salvarUsuarioController()}"
-					styleClass="btn btn-primary" iconAwesome="plus-circle" />
+					styleClass="btn btn-primary" iconAwesome="plus-circle">
+					
+				</b:commandButton> 
 				<h:outputText />
 			</h:panelGrid>
 		</b:container>
